--- a/src/app/top/top.component.html
+++ b/src/app/top/top.component.html
@@ -4,7 +4,7 @@
     <div class="topbar-left">
       <a class="topbar-brand" [routerLink]="['home']">
         <!-- <img class="logo-inverse" src="assets/img/logo.svg" width="136px" alt="logo"> -->
-        <img class="logo-default" src="assets/img/CanYaDAO.svg"  width="auto" height="36px" alt="logo">
+        <img class="logo-default" src="assets/img/InstaSwap.svg"  width="auto" height="36px" alt="logo">
       </a>
     </div>
     <div class="topbar-left" id="top-nav">
