--- a/src/app/homemodal/homemodal.component.html
+++ b/src/app/homemodal/homemodal.component.html
@@ -57,7 +57,7 @@
 
           <div *ngIf="view==2">
 
-            <p class="fw-300 my-5" style="font-size:1.25rem">Congratulations! You have now joined the CanYaDAO!</p>
+            <p class="fw-300 my-5" style="font-size:1.25rem">Congratulations! You have now joined the instaswap!</p>
             <img class="logo-default my-30" src="assets/img/confirmation.png"  width="auto" height="100px" alt="logo">
             <p>You can now earn on tasks and contribute to the CanYa Ecosystem.</p>
           </div>
