--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -83,7 +83,7 @@
                 <strong class="fw-300" style="font-size:1.25rem">CONNECT WALLET</strong>
                 <hr style="margin:5px" />
                 <p class="text-center" style="color:#ff6666">
-                  Please check you are visiting https://canyadao.com
+                  Please check you are visiting https://instaswap.com
                 </p>
                 <hr style="margin:3px" />
               </div>
