--- a/src/app/top/top.component.html
+++ b/src/app/top/top.component.html
@@ -19,7 +19,7 @@
 
       </div>
 
-        <div *ngIf="getWalletNone()">
+        <!-- <div *ngIf="getWalletNone()">
           <li class="nav-item mobile-only">
             <a class="nav-link"  href="https://www.binance.org/en/create" target="_blank">
               <button _ngcontent-c1="" class="btn btn-primary btn-outline btn-sm btn-space" id="btn-create" type="submit">CREATE WALLET</button>
@@ -30,10 +30,10 @@
               <button class="btn btn-primary btn-sm  btn-top" id="wallet-btn">CONNECT WALLET</button>
             </a>
           </li>
-        </div>
+        </div> -->
 
 
-      <div class="topbar-center" id="top-nav">
+      <!-- <div class="topbar-center" id="top-nav">
         <div *ngIf="getWalletNone()">
           <a class="top-btn" style="padding-right:10px" href="https://www.binance.org/en/create" target="_blank">
             <button _ngcontent-c1="" class="btn btn-primary btn-outline btn-sm btn-space" id="btn-create" type="submit">CREATE WALLET</button>
@@ -44,9 +44,9 @@
           <!-- <a class="top-btn text-right"> -->
           <!-- <button class="topbar-toggler text-gray btn-top text-right">&#9776;</button>
           </a> -->
-        </div>
+        <!-- </div>
 
-        </div>
+        </div> -->
 
 
       </div>
