--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,4 +1,17 @@
-
+.under
+{
+  position:absolute;
+  left:5px;
+  top:15px;
+  z-index:1;
+}
+.over
+{
+  position:absolute;
+  left:30px;
+  top:15px;
+  z-index:1;
+}
 
 .min-70 {
     min-height: 70vh;
