--- a/src/app/top/top.component.html
+++ b/src/app/top/top.component.html
@@ -10,7 +10,7 @@
     <div class="topbar-left" id="top-nav">
 
 
-        <div *ngIf="getWalletBool()">
+        <div>
           <ul class="topbar-center nav mr-3">
           <li class="nav-item mr-20"><a class="nav-link" id="home-link" [routerLink]="['home']">HOME</a></li>
           <li class="nav-item mr-20"><a class="nav-link" class="nav-link" id="profile-link" [routerLink]="['profile']">PROFILE</a></li>
