--- a/src/app/homemodal/homemodal.component.html
+++ b/src/app/homemodal/homemodal.component.html
@@ -22,7 +22,7 @@
         <div style="padding-top:10px"></div>
 
         <div *ngIf="view==0">
-          <p class="text-center py-10 mb-5"><span>You are joining the CanYa DAO as </span>
+          <p class="text-center py-10 mb-5"><span>You are joining the InstaSwap as </span>
             <span><strong>{{getName(id) | uppercase }}</strong></span></p>
 
             <p class="text-primary py-5 my-5 h-50" style="font-size:2.25rem">{{ getStake(id) | number:0}} CAN</p>
