--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="modal-body">
     <p>{{ content }}</p>
-    <p class="text-center">You are joining the CanYa DAO as Admin</p>
+    <p class="text-center">You are joining the InstaSwap as Admin</p>
     <p class="text-primary" style="font-size:2.25rem">10,000 CAN</p>
     <p class="fw-300" style="font-size:1.25rem">Stake Required</p>
     <div style="padding-top:10px"></div>
